# BioInterchangeC

./: CMakeLists.txt  LICENSE.txt  README.md  biointerchange-l1.docx  biointerchange-l1.txt  biointerchange-l2.txt  build-brew-binary.sh  build-brew.sh  build-deb.sh  build-release.sh  build-tarball.sh  clean.sh  get_buildnumber.sh  xcode.sh
context/: gvf-c1.json
include/: ext-python.h  fio.h  gen.h  gff.h  gvf.h  license.h  so.h  vcf.h
scripts/: html2md.py
src/biointerchange/: ext-python.c  fio.c  gen.c  gff.c  gvf.c  license.c  main.c  so.c  vcf.c
support/dmg/: BioInterchange600white.icns  background.afphoto
templates/: changelog  control
test/: main.cpp
test-data/simplepy/: simple.py
test/biointerchange/: ext-python.cpp  fio.cpp  gen.cpp  gff.cpp  gvf.cpp  license.cpp  so.cpp  vcf.cpp
